docs/book/samples/appa/unfused_wall_check.out
error[formatting]: a one-step stage fuses with its wall: write `>> step` on one line
  --> unfused_wall_check.kso:3:1
   3 | >>
       ^
