docs/book/samples/appa/unfused_wall_check.kso
main =
  print "steeping"
  print "warming"
  >>
  print "serving"
